-Updated Commands
	-/save - If correct amount of arguments given, it won't error when executed from Console now.
	-/throttle - If set to 0, throttling will be turned off (building commands will go at full speed).
	-/unload empty - Works as intended now.
	-/zoneall - Fixed to work properly on non perfect cube levels.
-Added Omni-Banning and Global-Banning for servers / consoles.
-Map Editor/Viewer tab complete, added fCraft IsoCat Map Viewer.
-On login, if player is not using minecraft.net's game client and they are using a migrated account, instead of kicking for "illegal name" it will tell them to use minecraft.net's client instead.
	
MCDawn 1.0.1.4
-Building commands "throttle" redone, now goes on a scale of 1 to 200 (Determines how many blocks to set in 100 ms).
-Updated Commands
	-/spleef players - Shows status of all players in spleef.
	-/ignore - Cannot ignore ops if Server.allowIgnoreOps is false.
	-/gun - Fixed so if you have gun enabled while allowguns on your level is false, it will automatically stop.
	-/missile - Fixed so if you have missile enabled while allowguns on your level is false, it will automatically stop.
	-/throttle - Goes on a scale of 1-200 now.
	-/newlvl - Changed level creation size maximum to the MaxValue of Int32 in .NET (over 2 billion), for permission 100 (Admin) and higher.
	-/abort - Clears your stored message if you chose to extend it with putting a > or < at the end now.
-New Commands
	-/hallowguns - Toggle gun use on your home map.
-If MySQL is not configured properly the error log will also show now.
-CRITICAL: Updated minecraft.net server list heartbeat url from http://www.minecraft.net/heartbeat.jsp to https://minecraft.net/heartbeat.jsp.

MCDawn 1.0.1.3
-Color codes are no longer sent to IRC/Global.
-Ranking/banning 'reasons' can now be assigned.
-Updated Commands
	-/displayname - Allows up to 60 characters (including color codes), instead of just 16 now.
	-/me - Shows displayname instead of real name now.