@@ -1,5 +1,6 @@
 using System;
 using System.IO;
+using System.Threading;
 
 namespace MCDawn
 {
@@ -18,63 +19,67 @@ namespace MCDawn
 
             if (message.ToLower() == "all")
             {
-                if (p.group.Permission < LevelPermission.Operator) { Player.SendMessage(p, "Reserved for OP+"); return; }
-
-                foreach (Player who in Player.players)
+                if (p.group.Permission < LevelPermission.Operator && !p.ignorePermission) { Player.SendMessage(p, "Reserved for OP+"); return; }
+                
+                Level level = p.level;
+                foreach (Player who in level.players)
                 {
-                    if (who.level == p.level)
-                    {
+                    Thread t = new Thread(new ThreadStart(delegate {
+                        try
+                        {
+                            who.Loading = true;
+                            foreach (Player pl in Player.players) if (who.level == pl.level && who != pl) who.SendDie(pl.id);
+                            foreach (PlayerBot b in PlayerBot.playerbots) if (who.level == b.level) who.SendDie(b.id);
 
-                        who.Loading = true;
-                        foreach (Player pl in Player.players) if (who.level == pl.level && who != pl) who.SendDie(pl.id);
-                        foreach (PlayerBot b in PlayerBot.playerbots) if (who.level == b.level) who.SendDie(b.id);
+                            Player.GlobalDie(who, true);
+                            who.SendUserMOTD(); who.SendMap();
 
-                        Player.GlobalDie(who, true);
-                        who.SendUserMOTD(); who.SendMap();
+                            ushort x = (ushort)((0.5 + who.level.spawnx) * 32);
+                            ushort y = (ushort)((1 + who.level.spawny) * 32);
+                            ushort z = (ushort)((0.5 + who.level.spawnz) * 32);
 
-                        ushort x = (ushort)((0.5 + who.level.spawnx) * 32);
-                        ushort y = (ushort)((1 + who.level.spawny) * 32);
-                        ushort z = (ushort)((0.5 + who.level.spawnz) * 32);
+                            if (!who.hidden) Player.GlobalSpawn(who, x, y, z, who.level.rotx, who.level.roty, true);
+                            else unchecked { who.SendPos((byte)-1, x, y, z, who.level.rotx, who.level.roty); }
 
-                        if (!who.hidden) Player.GlobalSpawn(who, x, y, z, who.level.rotx, who.level.roty, true);
-                        else unchecked { who.SendPos((byte)-1, x, y, z, who.level.rotx, who.level.roty); }
+                            foreach (Player pl in Player.players)
+                                if (pl.level == who.level && who != pl && !pl.hidden)
+                                    who.SendSpawn(pl.id, pl.color + pl.name, pl.pos[0], pl.pos[1], pl.pos[2], pl.rot[0], pl.rot[1]);
 
-                        foreach (Player pl in Player.players)
-                            if (pl.level == who.level && who != pl && !pl.hidden)
-                                who.SendSpawn(pl.id, pl.color + pl.name, pl.pos[0], pl.pos[1], pl.pos[2], pl.rot[0], pl.rot[1]);
+                            foreach (PlayerBot b in PlayerBot.playerbots)
+                                if (b.level == who.level)
+                                    who.SendSpawn(b.id, b.color + b.name, b.pos[0], b.pos[1], b.pos[2], b.rot[0], b.rot[1]);
 
-                        foreach (PlayerBot b in PlayerBot.playerbots)
-                            if (b.level == who.level)
-                                who.SendSpawn(b.id, b.color + b.name, b.pos[0], b.pos[1], b.pos[2], b.rot[0], b.rot[1]);
+                            who.Loading = false;
 
-                        who.Loading = false;
+                            who.SendMessage("&bMap reloaded by " + p.name);
+                            Player.SendMessage(p, "&4Finished reloading for " + who.name);
+                            /*
+                            foreach (Player pl in Player.players) if (who.level == pl.level && who != pl) who.SendDie(pl.id);
+                            foreach (PlayerBot b in PlayerBot.playerbots) if (who.level == b.level) who.SendDie(b.id);
+                            Player.GlobalDie(who, true);
 
-                        who.SendMessage("&bMap reloaded by " + p.name);
-                        Player.SendMessage(p, "&4Finished reloading for " + who.name);
-                        /*
-                        foreach (Player pl in Player.players) if (who.level == pl.level && who != pl) who.SendDie(pl.id);
-                        foreach (PlayerBot b in PlayerBot.playerbots) if (who.level == b.level) who.SendDie(b.id);
-                        Player.GlobalDie(who, true);
+                            who.SendMap();
 
-                        who.SendMap();
+                            ushort x = (ushort)((0.5 + who.level.spawnx) * 32);
+                            ushort y = (ushort)((1 + who.level.spawny) * 32);
+                            ushort z = (ushort)((0.5 + who.level.spawnz) * 32);
 
-                        ushort x = (ushort)((0.5 + who.level.spawnx) * 32);
-                        ushort y = (ushort)((1 + who.level.spawny) * 32);
-                        ushort z = (ushort)((0.5 + who.level.spawnz) * 32);
+                            Player.GlobalSpawn(who, x, y, z, who.level.rotx, who.level.roty, true);
 
-                        Player.GlobalSpawn(who, x, y, z, who.level.rotx, who.level.roty, true);
+                            foreach (Player pl in Player.players)
+                                if (pl.level == who.level && who != pl && !pl.hidden)
+                                    who.SendSpawn(pl.id, pl.color + pl.name, pl.pos[0], pl.pos[1], pl.pos[2], pl.rot[0], pl.rot[1]);
 
-                        foreach (Player pl in Player.players)
-                            if (pl.level == who.level && who != pl && !pl.hidden)
-                                who.SendSpawn(pl.id, pl.color + pl.name, pl.pos[0], pl.pos[1], pl.pos[2], pl.rot[0], pl.rot[1]);
+                            foreach (PlayerBot b in PlayerBot.playerbots)
+                                if (b.level == who.level)
+                                    who.SendSpawn(b.id, b.color + b.name, b.pos[0], b.pos[1], b.pos[2], b.rot[0], b.rot[1]);
 
-                        foreach (PlayerBot b in PlayerBot.playerbots)
-                            if (b.level == who.level)
-                                who.SendSpawn(b.id, b.color + b.name, b.pos[0], b.pos[1], b.pos[2], b.rot[0], b.rot[1]);
-
-                        who.SendMessage("Map reloaded.");
-                        */
-                    }
+                            who.SendMessage("Map reloaded.");
+                            */
+                        }
+                        catch (Exception ex) { Server.ErrorLog(ex); }
+                    }));
+                    t.Start();
                 }
 
                 GC.Collect();
